# tmppy

./: .coveragerc  .gitignore  .travis.yml  BUILD  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  setup.py
.cache/v/cache/: lastfailed
_py2tmp/: .coveragerc  CMakeLists.txt  __init__.py  ast2highir.py  ast2ir.py  ast_to_ir3.py  compile.py  errors.py  generate_ir0_builtins.py  highir.py  highir2ir.py  ir.py  ir0.py  ir0_builtin_literals.py  ir0_builtins.py  ir0_is_variadic.py  ir0_to_cpp.py  ir1.py  ir1_to_ir0.py  ir2.py  ir2_to_ir1.py  ir2lowir.py  ir3.py  ir3_to_ir2.py  link.py  lowir.py  lowir2cpp.py  main.py  optimize_ir0.py  optimize_ir3.py  sema.py  tmppy_builtins.py  tmppy_object_file.py  transform_ir0.py  transform_ir3.py  types.py  unification.py  unify_ir0.py  utils.py  visit_ir0.py
_py2tmp/compiler/: __init__.py  _compile.py  _generate_ir0_builtins.py  _link.py  _main.py  _tmppy_builtins.py
_py2tmp/compiler/output_files/: __init__.py  _tmppy_object_file.py
_py2tmp/compiler/stages/: __init__.py  _ast_to_ir2.py  _ast_to_ir3.py  _ir0_to_cpp.py  _ir1_to_ir0.py  _ir2_to_ir0.py  _ir2_to_ir1.py  _ir3_to_ir1.py  _ir3_to_ir2.py
_py2tmp/compiler/testing/: __init__.py  _utils.py
_py2tmp/compiler/tests/: test_assertions.py  test_attribute_access.py  test_bools.py  test_comparisons.py  test_custom_types.py  test_exceptions.py  test_functions.py  test_ifelse.py  test_imports.py  test_ints.py  test_lists.py  test_match.py  test_misc.py  test_optimizations.py  test_pass.py  test_sets.py  test_type_annotations.py  test_type_expr_to_cpp.py  test_type_literals.py  test_underscore_variable.py  test_variables.py
_py2tmp/coverage/: __init__.py  _hooks.py  _is_enabled.py  _plugin.py  source_branch.py
_py2tmp/cpp/: __init__.py  _writers.py
_py2tmp/ir0/: __init__.py  _builtin_literals.py  _is_variadic.py  _template_dependency_graph.py  _transformation.py  _visitor.py  _writers.py  ir.py
_py2tmp/ir0_optimization/: __init__.py  _common_subexpression_elimination.py  _compute_non_expanded_variadic_vars.py  _configuration_knobs.py  _constant_folding.py  _expression_simplification.py  _local_optimizations.py  _normalize_expressions.py  _optimization_execution.py  _optimize.py  _recalculate_template_instantiation_can_trigger_static_asserts_info.py  _remove_unused_toplevel_elems.py  _replace_var_with_expr.py  _split_template_defn_with_multiple_outputs.py  _template_instantiation_inlining.py  _unify.py  common_subexpression_elimination.py  compute_non_expanded_variadic_vars.py  configuration_knobs.py  constant_folding.py  expression_simplification.py  local_optimizations.py  normalize_expressions.py  optimization_execution.py  optimize_ir0.py  recalculate_template_instantiation_can_trigger_static_asserts_info.py  remove_no_op_stmts.py  remove_unused_toplevel_elems.py  replace_templates_with_templated_using_declarations.py  replace_var_with_expr.py  split_template_defn_with_multiple_outputs.py  split_template_defn_with_specializations_and_multiple_outputs.py  template_dependency_graph.py  template_instantiation_inlining.py  unification.py  unify_ir0.py
_py2tmp/ir0_optimization/tests/: test_unify_ir0.py
_py2tmp/ir1/: __init__.py  _visitor.py  _writers.py  free_variables.py  ir.py
_py2tmp/ir2/: __init__.py  _free_variables.py  _return_type.py  _transformation.py  _visitor.py  free_variables.py  ir.py
_py2tmp/ir2_optimization/: _optimize.py  _recalculate_function_can_throw_info.py
_py2tmp/ir3/: __init__.py  _free_variables.py  _return_type.py  _transformation.py  _visitor.py  ir.py
_py2tmp/ir3_optimization/: __init__.py  _optimize.py  _recalculate_function_can_throw_info.py  optimize_ir3.py  recalculate_function_can_throw_info.py
_py2tmp/testing/: BUILD  build_defs.bzl  utils.py
_py2tmp/tests/: BUILD  CMakeLists.txt  test_and.py  test_assertions.py  test_attribute_access.py  test_basic.py  test_bools.py  test_comparisons.py  test_custom_types.py  test_exceptions.py  test_functions.py  test_ifelse.py  test_imports.py  test_ints.py  test_lists.py  test_match.py  test_misc.py  test_optimizations.py  test_optimize_ir0.py  test_or.py  test_sets.py  test_type_annotations.py  test_type_literals.py  test_variables.py
_py2tmp/unification/: __init__.py  _canonicalization.py  _exceptions.py  _strategy.py  _unification.py  _utils.py
_py2tmp/unification/tests/: test_unification.py
_py2tmp/utils/: __init__.py  _ast_to_string.py  _clang_format.py  _graphs.py  _ir_to_string.py  _unification.py  _value_type.py
_py2tmp/utils/tests/: __init__.py  test_unification.py
_tmppy/: __init__.py  lists.py  type.py
extras/: example.py  example_lib.py
extras/examples/: CMakeLists.txt  example.py
extras/examples/tests/: example_test.py
extras/scripts/: postsubmit-helper.sh  postsubmit.sh  release.sh  travis_ci_install_linux.sh  travis_ci_install_osx.sh  travis_yml_generator.py
include/tmppy/: tmppy.h
py2tmp/: __init__.py  main.py
py2tmp/testing/: __init__.py  pytest_plugin.py
tests/: test_assertions.py  test_attribute_access.py  test_bools.py  test_comparisons.py  test_custom_types.py  test_exceptions.py  test_functions.py  test_ifelse.py  test_imports.py  test_ints.py  test_lists.py  test_match.py  test_misc.py  test_optimizations.py  test_pass.py  test_sets.py  test_type_annotations.py  test_type_expr_to_cpp.py  test_type_literals.py  test_underscore_variable.py  test_unification.py  test_unify_ir0.py  test_variables.py
tmppy/: __init__.py
